// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical and tooltip (no icon). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: -90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Passed 0.970s 
    </div>
    <div>
      Average: Passed 0.970s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (arrow downward). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Passed 0.890s 
      <i
        class="v-icon material-icons error--text"
        style="font-size: 16px;"
      >
        arrow_downward
      </i>
    </div>
    <div>
      Average: Passed 0.800s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (arrow upward). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Passed 0.900s 
      <i
        class="v-icon material-icons primary--text"
        style="font-size: 16px;"
      >
        arrow_upward
      </i>
    </div>
    <div>
      Average: Passed 0.910s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (close). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Error 0.870s 
      <i
        class="v-icon material-icons error--text"
        style="font-size: 16px;"
      >
        close
      </i>
    </div>
    <div>
      Average: Passed 0.870s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (done). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Passed 0.220s 
      <i
        class="v-icon material-icons primary--text"
        style="font-size: 16px;"
      >
        done
      </i>
    </div>
    <div>
      Average: Failed 0.220s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (no icon). 1`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Failed 0.770s 
    </div>
    <div>
      Average: Failed 0.770s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` historical tooltip (no icon). 2`] = `
<div
  class="v-tooltip__content menuable__content__active"
  style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
>
  <div>
    <div>
      Current: Skipped 0.000s 
    </div>
    <div>
      Average: Skipped 0.000s
    </div>
  </div>
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` tooltip with opacity 0. 1`] = `
<div>
  <div
    class="layout position-relative justify-center"
  >
    <div>
      <div
        class=""
      >
        <canvas
          height="400"
          id="bar-chart"
          style="display: block; box-sizing: border-box; height: 400px; width: 400px;"
          width="400"
        />
      </div>
    </div>
    <div
      class="v-tooltip__content menuable__content__active"
      style="opacity: 0;"
    />
  </div>
  <c-table-pagination-stub
    items="5,10,20"
    total-items="0"
  />
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` tooltip without. 1`] = `
<div>
  <div
    class="layout position-relative justify-center"
  >
    <div>
      <div
        class=""
      >
        <canvas
          height="400"
          id="bar-chart"
          style="display: block; box-sizing: border-box; height: 400px; width: 400px;"
          width="400"
        />
      </div>
    </div>
    <div
      class="v-tooltip__content menuable__content__active"
      style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
    >
      <div>
        <div>
          0.000s
        </div>
        <div>
          Skipped
        </div>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    items="5,10,20"
    total-items="0"
  />
</div>
`;

exports[`junit-gantt-chart Renders \`junit-gantt-chart\` tooltip. 1`] = `
<div>
  <div
    class="layout position-relative justify-center"
  >
    <div>
      <div
        class=""
      >
        <canvas
          height="400"
          id="bar-chart"
          style="display: block; box-sizing: border-box; height: 400px; width: 400px;"
          width="400"
        />
      </div>
    </div>
    <div
      class="v-tooltip__content menuable__content__active"
      style="opacity: 1; left: 90px; top: 95px; pointer-events: none;"
    >
      <div>
        <div>
          0.700s
        </div>
        <div>
          Error: test_case_msg_9_6_0
        </div>
      </div>
    </div>
  </div>
  <c-table-pagination-stub
    items="5,10,20"
    total-items="0"
  />
</div>
`;
